Update to 1.18.2 and clean slightly